added icon files via git

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-  <title>Mugunth-portfolio</title>
+  <title>Mugunth-port148</title>
   <meta content="" name="description">
   <meta content="" name="keywords">
 
@@ -40,7 +40,7 @@
     <div class="container">
       <h1><a href="index.html">Hi I'm <span id="name">Mugunth</span></a></h1>
       <!-- Uncomment below if you prefer to use an image logo -->
-      <!-- <a href="index.html" class="mr-auto"><img src="assets/img/logo.png" alt="" class="img-fluid"></a> -->
+      <!-- <a href="index.html" class="mr-auto"><img src="assets/img/logo.png" alt="" class="img-fluid"></a>-->
       <h2 class="summary">I like to craft solid and scalable frontend products with great user experiences</h2>
 
       <nav id="navbar" class="navbar">
