--- a/index.html
+++ b/index.html
@@ -558,7 +558,7 @@
         <div class="col-lg-12 d-flex justify-content-center">
           <ul id="portfolio-flters">
             <li data-filter="*" class="filter-active">All</li>
-            <li data-filter=".filter-app">blend</li>
+            <li data-filter=".filter-app">3D Art</li>
             <!--<li data-filter=".filter-card">Card</li>-->
             <li data-filter=".filter-web">Web</li>
           </ul>
@@ -583,10 +583,10 @@
 
         <div class="col-lg-4 col-md-6 portfolio-item filter-web">
           <div class="portfolio-wrap">
-            <img src="assets/img/portfolio/portfolio-2.jpg" class="img-fluid" alt="">
+            <img src="assets/img/portfolio/web3.png" class="img-fluid" alt="">
             <div class="portfolio-info">
-              <h4>Web 1</h4>
-              <p>Web</p>
+              <h4>Weather App Website</h4>
+              <p>Project 1</p>
               <div class="portfolio-links">
                 <a href="assets/img/portfolio/portfolio-2.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Web 3"><i class="bx bx-plus"></i></a>
                 <a href="portfolio-details.html" data-gallery="portfolioDetailsGallery" data-glightbox="type: external" class="portfolio-details-lightbox" title="Portfolio Details"><i class="bx bx-link"></i></a>
