Fixed some bugs

--- a/index.html
+++ b/index.html
@@ -400,7 +400,7 @@
 
       <div class="row">
         <div class="col-lg-6">
-          <h3 class="resume-title">Sumary</h3>
+          <h3 class="resume-title">Summary</h3>
           <div class="resume-item pb-0">
             <h4>Mugunth</h4>
             <p><em>I Model and Use 3D models in frontend web development as product visualization Which gives an idea of the Product to the users, With 
