--- a/index.html
+++ b/index.html
@@ -192,7 +192,7 @@
         <div class="col-lg-6">
 
           <div class="progress">
-            <span class="skill">Java <i class="val">70%</i></span>
+            <span class="skill">TailWind<i class="val">70%</i></span>
             <div class="progress-bar-wrap">
               <div class="progress-bar" role="progressbar" aria-valuenow="70" aria-valuemin="0" aria-valuemax="100"></div>
             </div>
@@ -385,7 +385,8 @@
 
       </div>
 
-    </div><!-- End Testimonials  -->
+    </div>
+    <!-- End Testimonials  -->
 
 
     <!-- ======= Resume Section ======= -->
