--- a/index.html
+++ b/index.html
@@ -34,9 +34,6 @@
 
   <!-- ======= Header ======= -->
   <header id="header">
-    <video autoplay loop muted plays-inline class="video">
-      <source src="/assets/img/particals.mp4" type="video/mp4">
-    </video>
     <div class="container">
       <h1><a href="index.html">Hi I'm <span id="name">Mugunth</span></a></h1>
       <!-- Uncomment below if you prefer to use an image logo -->
@@ -53,7 +50,10 @@
           <li><a class="nav-link" href="#contact">Contact</a></li>
         </ul>
         <i class="bi bi-list mobile-nav-toggle"></i>
-      </nav><!-- .navbar -->
+      </nav>
+
+      <!-- .navbar -->
+      
 
       <div class="social-links">
         <a href="https://github.com/Mugunth148" class="github"><i class="bi bi-github"></i></a>
@@ -61,9 +61,9 @@
         <a href="https://instagram.com/zen__valorant?igshid=ZGUzMzM3NWJiOQ==" class="instagram"><i class="bi bi-instagram"></i></a>
         <a href="https://www.linkedin.com/in/mugunth-73b884279" class="linkedin"><i class="bi bi-linkedin"></i></a>
       </div>
-
     </div>
-  </header><!-- End Header -->
+  </header>
+  <!-- End Header -->
 
   <!-- ======= About Section ======= -->
   <section id="about" class="about">
