Updated ui buttons

--- a/index.html
+++ b/index.html
@@ -174,7 +174,7 @@
           </div>
 
           <div class="progress">
-            <span class="skill">CSS <i class="val">90%</i></span>
+            <span class="skill">CSS <i class="val">90%</i></span> 
             <div class="progress-bar-wrap">
               <div class="progress-bar" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100"></div>
             </div>
@@ -748,47 +748,7 @@
         </div>
       </div>
 
-      <!--<form action="https://formspree.io/f/xgejwndk" method="post">
-        <div class="col-md-6 mt-4 d-flex align-items-stretch">
-          <div class="info-box">
-          <input type="text" name="name"   placeholder="Full Name" required>
-        </div>
-        <div class="info-box">
-          <input type="email"  name="email"  placeholder="Email" required>
-        </div>
-      </div>
-
-         <div class="contact-container">
-        <div>
-          <input type="text"  name="subject" class="inside-contact" id="subject" placeholder="Subject" required>
-        </div>
-        <div>
-          <textarea name="message" id="message" rows="5" class="inside-contact" placeholder="Message" required></textarea>
-        </div>
-        <div>
-        <div class="submit"><button type="submit">Send Message</button></div>
-      </div>
-    </div>
-  </div>
-       </form>
-     <div class="container-contact">  
-  <form id="contact-form" action="https://formspree.io/f/xgejwndk" method="post">
-    <fieldset>
-      <input placeholder="Your name" type="text" tabindex="1" required autofocus>
-    </fieldset>
-    <fieldset>
-      <input placeholder="Your Email Address" type="email" tabindex="2" required>
-    </fieldset>
-    <fieldset>
-      <input placeholder="Your Phone Number" type="tel" tabindex="3" required>
-    </fieldset>
-    <fieldset>
-      <textarea placeholder="Type your Message Here...." tabindex="5" required></textarea>
-    </fieldset>
-    <fieldset>
-      <button name="submit" type="submit" id="contact-submit" data-submit="...Sending">Submit</button>
-    </fieldset>
-  </form> -->
+<!--Contact form using formspree api-->
   <form action="https://formspree.io/f/xgejwndk" method="post" role="form" class="php-email-form mt-4">
         <div class="row">
           <div class="col-md-6 form-group">
@@ -806,7 +766,7 @@
         </div>
         <div class="my-3">
           <div class="loading">Loading</div>
-          <div class="error-message"></div>
+          <div class="error-message">Server Down, Please Contact the Developer</div>
           <div class="sent-message">Your message has been sent. Thank you!</div>
         </div>
         <div class="text-center"><button type="submit">Send Message</button></div>
