Fixed Bugs in Error 404 page

--- a/404.html
+++ b/404.html
@@ -129,7 +129,7 @@
 			<h2>Don't be spooked.</h2>
 			<p>The page you are looking for has slipped into an unknown realm. Click the button below to go back to the homepage.</p>
 			
-				<a href="https://mugunth148.github.io/zendex-port/" class="GFG">
+				<a href="index.html" class="GFG">
 					Home
 				</a>
 		  </div>
