Updated : softwares in about section

--- a/index.html
+++ b/index.html
@@ -252,8 +252,8 @@
         </div>
         <div class="col-lg-3 col-md-4 mt-4">
           <div class="icon-box">
-            <img src="assets/logo/git.png" alt=".git" class="logo">
-            <h3>Git</h3>
+            <img src="assets/logo/xd.png" alt=".XD" class="logo">
+            <h3>Adobe XD</h3>
           </div>
         </div>
         <div class="col-lg-3 col-md-4 mt-4">
@@ -270,14 +270,14 @@
         </div>
         <div class="col-lg-3 col-md-4 mt-4">
           <div class="icon-box">
-            <img src="assets/logo/figma.png" alt=".figma" class="logo">
+            <img src="assets/logo/figma.png" alt=".figma" class="logo" id="figma">
             <h3>Figma</h3>
           </div>
         </div>
         <div class="col-lg-3 col-md-4 mt-4">
           <div class="icon-box">
-            <img src="assets/logo/npm.png" alt=".npm" class="logo" id="npm-logo">
-            <h3>Npm</h3>
+            <img src="assets/logo/git.png" alt=".Git" class="logo" id="npm-logo">
+            <h3>Git</h3>
           </div>
         </div>
         <div class="col-lg-3 col-md-4 mt-4">
