Added: Download cv and hire me button

--- a/index.html
+++ b/index.html
@@ -36,8 +36,7 @@
   <header id="header">
     <div class="container">
       <h1><a href="index.html">Hi I'm <span id="header-name">Mugunth</span></a></h1>
-      <!-- Uncomment below if you prefer to use an image logo -->
-      <!-- <a href="index.html" class="mr-auto"><img src="assets/img/logo.png" alt="" class="img-fluid"></a>-->
+
       <h2 class="summary">I like to craft solid and scalable frontend products with great user experiences</h2>
 
       <nav id="navbar" class="navbar">
@@ -111,7 +110,13 @@
           </p>
         </div>
       </div>
+      <div class="cv-container">
+        
+        <button onclick="navigateToID()" class="hire-me">Hire Me!</button>
+      
+        <button onclick="downloadFile()"class="download-cv">Download CV</button>
 
+        </div>
     </div><!-- End About Me -->
 
     <!-- ======= Counts ======= -->
@@ -312,7 +317,7 @@
       <div class="testimonials-slider swiper" data-aos="fade-up" data-aos-delay="100">
         <div class="swiper-wrapper">
 
-          <!--<div class="swiper-slide">
+          <div class="swiper-slide">
             <div class="testimonial-item">
               <p>
                 <i class="bx bxs-quote-alt-left quote-icon-left"></i>
