Add: download function

--- a/index.html
+++ b/index.html
@@ -112,9 +112,16 @@
       </div>
       <div class="cv-container">
         
-        <button onclick="navigateToID()" class="hire-me">Hire Me!</button>
+        <button 
+         class="hire-me">
+         <a class="nav-link" href="/index.html#contact">
+          Hire Me!
+         </a>
+         </button>
       
-        <button onclick="downloadFile()"class="download-cv">Download CV</button>
+        <button onclick="location.href='https://drive.google.com/file/d/15zFF8Tn78nlVcukmY9loumpaNGgnl86A/view?usp=drive_link';"class="download-cv"> 
+          Download CV</a>
+        </button>
 
         </div>
     </div><!-- End About Me -->
