Update: download cv button in about section

--- a/index.html
+++ b/index.html
@@ -119,8 +119,9 @@
          </a>
          </button>
       
-        <button onclick="location.href='https://drive.google.com/file/d/15zFF8Tn78nlVcukmY9loumpaNGgnl86A/view?usp=drive_link';"class="download-cv"> 
-          Download CV</a>
+        <button class="download-cv"> <a href="assets/img/Mugunth's Resume.pdf" download="Mugunth's Resume.pdf">
+          Download CV
+        </a>
         </button>
 
         </div>
