updated: icon on about section

--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
 
         <div class="col-lg-3 col-md-6">
           <div class="count-box">
-            <i class="bi bi-emoji-smile"></i>
+            <i class="bi bi-laptop"></i>
             <span data-purecounter-start="0" data-purecounter-end="1" data-purecounter-duration="1" class="purecounter"></span>
             <p>Hackathon</p>
           </div>
@@ -150,7 +150,7 @@
 
         <div class="col-lg-3 col-md-6 mt-5 mt-lg-0">
           <div class="count-box">
-            <i class="bi bi-headset"></i>
+            <i class="bi bi-tools"></i>
             <span data-purecounter-start="0" data-purecounter-end="2" data-purecounter-duration="1" class="purecounter"></span>
             <p>Workshops</p>
           </div>
