--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
          </a>
          </button>
       
-        <button class="download-cv"> <a href="assets/img/Mugunth's Resume.pdf" download="Mugunth's Resume.pdf">
+        <button class="download-cv"> <a href="https://drive.google.com/file/d/15zFF8Tn78nlVcukmY9loumpaNGgnl86A/view?usp=drivesdk" download="Mugunth's Resume.pdf">
           Download CV
         </a>
         </button>
