changed dev class name

--- a/index.html
+++ b/index.html
@@ -789,7 +789,7 @@
 
   </section><!-- End Contact Section -->
 
-  <div class="credits">
+  <div class="dev">
     {} <a href="#Home">Mugunth</a>
   </div>
 
