--- a/index.html
+++ b/index.html
@@ -762,7 +762,7 @@
       </div>
 
 <!--Contact form using formspree api-->
-  <form action="https://formspree.io/f/xgejwndk" method="post" role="form" class="php-email-form mt-4">
+  <form action="https://formspree.io/f/xaygnzdv" method="post" role="form" class="php-email-form mt-4">
         <div class="row">
           <div class="col-md-6 form-group">
             <input type="text" name="name" class="form-control" id="name" placeholder="Your Name" required>
